@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2880026 by Anton4yk, drunken monkey: Fixed bugs in entity datasource's item
+  discovery code for edge cases.
 - #2881631 by jzavrl, drunken monkey, borisson_: Added alphabetic sort for
   properties in "Add fields" form.
 - #2867809 by drunken monkey, borisson_: Added an option to enable a processor
